# Naheulbook-Foundry

./: .eslintrc.json  .gitignore  .gitlab-ci.yml  BUILD.bazel  LICENSE  README.md  WORKSPACE.bazel  build.js  do_release.js  increment-version.js  package-lock.json  package.json  system.json  template.json  tsconfig.json
.github/workflows/: build.yml
libs/naheulbook_api/: BUILD.bazel  WORKSPACE.bazel  index.js  package-lock.json  package.json  rollup.config.js
libs/naheulbook_api/src/: BUILD.bazel  index.js  naheulbook-api.ts  naheulbook-data-api.ts  naheulbook-http-api.ts  naheulbook-websocket.ts
libs/naheulbook_api/src/api/requests/: create-character-request.ts  create-custom-character-request.ts  create-effect-sub-category-request.ts  index.ts  map-layer-request.ts  map-marker-request.ts  map-request.ts  monster-template-request.ts  patch-group-config-request.ts  update-user-request.ts
libs/naheulbook_api/src/api/responses/: calendar-response.ts  character-group-response.ts  character-level-up-response.ts  character-response.ts  character-search-response.ts  character-summary-response.ts  delete-invite-response.ts  effect-response.ts  effect-type-response.ts  event-response.ts  flag-response.ts  group-group-invite-response.ts  index.ts  item-partial-response.ts  item-response.ts  item-template-section-response.ts  item-template-sub-category-response.ts  item-type-response.ts  jwt-response.ts  list-active-character-response.ts  loot-response.ts  map-layer-response.ts  map-summary-response.ts  monster-response.ts  monster-template-response.ts  monster-type-response.ts  random-character-name-response.ts  stat-requirement-response.ts  user-search-response.ts
libs/naheulbook_api/src/api/shared/: durable.ts  group-config.ts  group-data.ts  item-template-data.ts  item-template-gun-data.ts  item-template-instrument-data.ts  monster-data.ts  monster-template-data.ts  origin-data.ts  stat-modifier.ts  util.ts
libs/naheulbook_api/src/api/shared/enums/: index.ts
libs/naheulbook_api/src/models/: character.model.ts  effect.model.ts  icon.model.ts  item-template.model.ts  misc.model.ts  monster.model.ts  speciality.model.ts
modules/: init.js  macro.js  monster-connector.js  monster-icon-generator.js  naheulbeuk-macro-helper.js  naheulbook-actor-sheet.js  naheulbook-api.js  naheulbook-config.js  naheulbook-connector.js
modules/connector/: character-connector.js  monster-connector.js  monster-icon-generator.js  naheulbook-api.js  naheulbook-connector.js
src/: error-monitoring.ts  global.d.ts  init.ts  macro.ts  naheulbeuk-macro-helper.ts  naheulbook-actor-sheet.ts  naheulbook-config.ts
src/connector/: character-connector.ts  monster-connector.ts  monster-icon-generator.ts  naheulbook-connector.ts
src/models/actor/: base-stats-actor-properties.ts  character-actor-properties.ts  monster-actor-properties.ts  naheulbook-actor-types.ts  naheulbook-actor.ts
src/models/misc/: game.ts
src/naheulbook-api/: naheulbook-api.ts  naheulbook-data-api.ts  naheulbook-http-api.ts  naheulbook-websocket.ts
src/naheulbook-api/models/: character.model.ts  flag.model.ts  item.model.ts  job.model.ts  monster.model.ts  origin.model.ts  skill.model.ts  stat-modifier.model.ts  stat-requirement.model.ts
src/sheets/: monster-actor-sheet.ts
src/ui/: style.scss
src/ui/chat/: chat.scss
src/ui/dialog/: dialog-base.ts  dialogs.scss  macro-creator-helper-dialog.hbs  macro-creator-helper-dialog.scss  macro-creator-helper-dialog.ts  (+3 more)
src/utils/: dialog-awaiter.ts  macro-util.ts  naheulbook-logger.js  naheulbook-logger.ts  roll-chat-util.ts  roll-factory.ts  roll-helper.ts  roll-message-helper.ts  roll-util.ts
styles/: actor-sheet.css  actor-sheet.css.map  actor-sheet.scss
templates/: actor-sheet.handlebars  actor-sheet.hbs  actor-sheet.html  monster-sheet.hbs  monster-sheet.scss  style.css  style.css.map  style.scss
templates/dialog/: naheulbook-dialog.scss
(+46 files in other folders)
