load("@build_bazel_rules_nodejs//:index.bzl", "copy_to_bin")

filegroup(
    name = "system-files",
    srcs = glob([
        "templates/**",
        "assets/**",
        "modules/**",
        "styles/**/*.css",
        "system.json",
        "template.json"
    ])
)

genrule(
    name = "copy",
    srcs = ["//libs/naheulbook_api:naheulbook-api"],
    outs = ["modules/naheulbook-api.js"],
    output_to_bindir = 1,
    cmd = "cp $< $@",
)

copy_to_bin(
    name = "system-files-bin",
    srcs = [":system-files"]
)

load("@rules_pkg//:pkg.bzl", "pkg_zip")

pkg_zip(
    name = "main",
    strip_prefix = ".",
    srcs = [
        ":system-files"
    ]
)
