load("@npm//@bazel/rollup:index.bzl", "rollup_bundle")
load("@build_bazel_rules_nodejs//:index.bzl", "copy_to_bin")

copy_to_bin(
    name = "index",
    srcs = ["index.js"]
)

rollup_bundle(
    name = "naheulbook-api",
    srcs = ["//libs/naheulbook_api/src:src"],
    deps = [
        "@npm//@rollup/plugin-commonjs",
        "@npm//@rollup/plugin-node-resolve",
        "@npm//@rollup/plugin-json",
        "//libs/naheulbook_api/src:src",
    ],
    format = "esm",
    entry_point = "index",
    config_file = "rollup.config.js",
    visibility = ["//visibility:public"],
)
