load("@npm//@bazel/typescript:index.bzl", "ts_project")

ts_project(
    name = "src",
    srcs = glob(["**/*.ts"]),
    tsconfig = {
        "compilerOptions": {
            "declaration": True,
            "module": "ESNext",
            "moduleResolution": "node",
            "lib": ["es6", "dom"],
            "target": "es6"
        },
    },
    deps = [
        "@npm//@microsoft/signalr",
        "@npm//@types/node",
        "@npm//rxjs",
    ],
    out_dir = "dist",
    visibility = ["//visibility:public"],
)

